Edited wiki page Features through web user interface.

--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -22,7 +22,7 @@ In order for GPS to work properly *your display should be at least 1280 x 960 pi
 ----
 http://i458.photobucket.com/albums/qq308/TheShock_album/Gallery%20WIKI/GimpPaintStudio-ce-David.jpg
 
-I believe that GPS could have. Subsets, so the first one is Chaos & Evolutions created by David Revoy the Art director of the Blender open source movie ,Sintel
+I believe that GPS could have. Subsets, so the first one is Chaos & Evolutions created by David Revoy the Art director of the Blender open source movie, Sintel.
 
 
 
