--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -2,13 +2,31 @@
 #labels Phase-Deploy,Featured
 _Some guys and girls, have made good videotutorials teaching how to install GPS properly if you need help. So thanks a lot for their work that i really apreciate._ 
 
-=How to install GPS in Windows XP by [http://www.youtube.com/user/reeceyamato reeceyamato]= 
-<wiki:video url="http://www.youtube.com/watch?v=g1KnTepWQzs&NR=1&feature=fvwp"/>
+{{{
+GNU/Linux
+  *Ubuntu 
+  *Mint
 
-=How to install GPS in Windows 7 by [http://www.youtube.com/user/reeceyamato reeceyamato]= 
-<wiki:video url="http://www.youtube.com/watch?v=1625YAwEMmQ"/>
- 
-=How to install GPS in Ubuntu by [http://www.youtube.com/user/Tru3m0sl3m Tru3m0sl3m]=
+Windows
+  *Windows Vista
+  *Windows XP
+  *Windows 7
+}}}
+----
+=GNU/Linux OS=
+---- 
+
+Instalation for Linux users
+
+you can paste simply this line by line in a terminal , the command start with a copy of your existing preset and gimp configuration , because it still important to keep the possibility to revert later.
+{{{
+mv ~/.gimp-2.6 ~/.gimp-2.6-backup
+wget http://gps-gimp-paint-studio.googlecode.com/files/GPS%201_5_final%20release.zip
+unzip GPS\ 1_5_final\ release.zip -d ~/.gimp-2.6
+rm GPS\ 1_5_final\ release.zip
+}}}
+
+==How to install GPS in Ubuntu by [http://www.youtube.com/user/Tru3m0sl3m Tru3m0sl3m]==
 <wiki:video url="http://www.youtube.com/watch?v=2_XuGPwlGxk"/>
 
 To install Gimp Paint Studio with Additional Brushes, first we must know where the user directory of Gimp is located. Assuming you have installed version 2.6 is usually found at:
@@ -18,6 +36,19 @@ Windows : C:\Documents and Settings\username\.gimp-2.6
 Mac : /Users/username/Library/Application Support/Gimp
 
 GNU/Linux : /home/username/.gimp-2.6
+
+
+=Windows OS=
+----
+==How to install GPS in Windows XP by [http://www.youtube.com/user/reeceyamato reeceyamato]== 
+<wiki:video url="http://www.youtube.com/watch?v=g1KnTepWQzs&NR=1&feature=fvwp"/>
+
+==How to install GPS in Windows 7 by [http://www.youtube.com/user/reeceyamato reeceyamato]== 
+<wiki:video url="http://www.youtube.com/watch?v=1625YAwEMmQ"/>
+
+=How to install GPS in German Language (Dutsch) by [http://www.youtube.com/user/HoneyballCookie HoneyballCookie]=
+<wiki:video url="http://www.youtube.com/watch?v=FpNWHgGw85k"/>
+
 
 
 Step by step installation:
@@ -35,18 +66,8 @@ Once you have copied all directories and files, just start the Gimp, which will 
 ----
 
 
-=How to install GPS in German Language (Dutsch) by [http://www.youtube.com/user/HoneyballCookie HoneyballCookie]=
-<wiki:video url="http://www.youtube.com/watch?v=FpNWHgGw85k"/>
 
-==Instalation for Linux users==
-you can paste simply this line by line in a terminal , the command start with a copy of your existing preset and gimp configuration , because it still important to keep the possibility to revert later.
 
-{{{
-mv ~/.gimp-2.6 ~/.gimp-2.6-backup
-wget http://gps-gimp-paint-studio.googlecode.com/files/GPS%201_5_final%20release.zip
-unzip GPS\ 1_5_final\ release.zip -d ~/.gimp-2.6
-rm GPS\ 1_5_final\ release.zip
-}}}
 
 
 ==How to install GPS. explained in text mode==
