--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -66,7 +66,10 @@ To install Gimp Paint Studio, first we must know *where the user directory of Gi
 
   * GNU/Linux : /home/username/.gimp-2.6 
 
+  * If you have the portable version “GIMPPortable/App/gimp/share/gimp/2.0/
+
 Start the fun part!
+you should back up the original files in case you wish to restore original layouts and tools.
 
 1. Copy all the GPS brushes copy the contents of the brushes directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
 
@@ -74,11 +77,11 @@ Start the fun part!
 
 3. To have the new palette, copy the file mismuestras.aco.gpl from the palettes folder and paste into the folder with the same name in the directory Gimp.
 
-4. If you also want to install the configuration of the GPS tools (recommended), you must copy the file toolrc and replace the already existing one (with the same name) in the program directory (you should make a copy of this file in case you later want to restore). 
+4. If you also want to install the *configuration of the GPS tools* (recommended), you must copy the file *toolrc* and replace the already existing one (with the same name) in the program directory *(you should make a copy of this file in case you later want to restore)*. 
 
-5. Do the same with the file sesionrc if you want to modify the GPS position and rearrange the windows on the Gimp's screen. You should know that the layout and the interface are highly optimized to work comfortably with a screen resolution of at least 1280 pixels wide. It is also advisable to install this file, but first make a backup copy of the original one, just in case.
+5. Do the same with the file *sessionrc* if you want to *modify the GPS position and rearrange the windows* on the Gimp's screen. You should know that the layout and the interface are highly optimized to work comfortably with a screen resolution of at least 1280 pixels wide. It is also advisable to install this file, but *first make a backup copy of the original one, just in case.*
 
-6. Once you have copied all directories and files, just start the Gimp, which will load the new configuration for the first time. In the tools panel you'll find two new shortcuts to the curves and tone / saturation, directly accessible from the main window. The interface of the window has been modified to have quick access to options for each tool and different color dialogs and palettes.
+6. Once you have copied all directories and files, just *start the Gimp*, which will load the new configuration for the first time. In the tools panel you'll find *several new shortcuts to the curves and tone / saturation*, directly accessible from the main window. The interface of the window has been modified to have quick access to options for each tool and different color dialogs and palettes.
 
 7. If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the top level of your GIMP configuration folder.  This file will add icons for the Hue/Saturation and Curves dialogs to the Toolbox.
 
