Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,11 +1,13 @@
 #summary Installation guide for GPS
 #labels Phase-Deploy,Featured
-_Some guys and girls, have made good videotutorials teaching how to install GPS properly if you need help. So thanks a lot for their work that i really apreciate._ 
+_Some guys and girls, have made good videotutorials teaching how to install GPS properly if you need help. So thanks a lot for their work that i really apreciate. 
+As Gimp and GPS are crossplatform, here it is the way to install in each case._
 
 {{{
 GNU/Linux
   *Ubuntu 
   *Mint
+  *installing GPS from a PPA (WIP)
 
 Windows
   *Windows Vista
@@ -52,9 +54,9 @@ rm GPS\ 1_5_final\ release.zip
 
 http://www.gimp.org/downloads/
 
-Once installed we can continue with the process. If GIMP is already running, exit the program (File->Quit).  This will make it easier to follow the installation steps. This should only take a few minutes if not less.
-
-Download the last version of GPS From the google code page:
+1. Install gimp and execute for the first time. Then Quit. (this step create the *tool-options* folder wich is needed later)
+ 
+2. Download the last version of GPS From the google code page:
 
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 
@@ -71,32 +73,33 @@ To install Gimp Paint Studio, first we must know *where the user directory of Gi
 Start the fun part!
 you should back up the original files in case you wish to restore original layouts and tools.
 
-1. Copy all the GPS brushes copy the contents of the brushes directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
+3. Copy the contents of the *brushes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
 
-2. Also copy the entire contents of the tool-options and paste it into the folder tool-options in the program directory. 
+4. Copy the contents of the *patterns* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
 
-3. To have the new palette, copy the file mismuestras.aco.gpl from the palettes folder and paste into the folder with the same name in the directory Gimp.
+3. Copy the contents of the *gradients* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
 
-4. If you also want to install the *configuration of the GPS tools* (recommended), you must copy the file *toolrc* and replace the already existing one (with the same name) in the program directory *(you should make a copy of this file in case you later want to restore)*. 
+4. Copy the contents of the *palettes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
 
-5. Do the same with the file *sessionrc* if you want to *modify the GPS position and rearrange the windows* on the Gimp's screen. You should know that the layout and the interface are highly optimized to work comfortably with a screen resolution of at least 1280 pixels wide. It is also advisable to install this file, but *first make a backup copy of the original one, just in case.*
+5. If you also want to install the *configuration of the GPS tools* (recommended), you must copy the file *toolrc* and replace the already existing one (with the same name) in the program directory *(you should make a copy of this file in case you later want to restore)*.
+If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the top level of your GIMP configuration folder.  This file will add icons for the Hue/Saturation and Curves dialogs to the Toolbox.
 
-6. Once you have copied all directories and files, just *start the Gimp*, which will load the new configuration for the first time. In the tools panel you'll find *several new shortcuts to the curves and tone / saturation*, directly accessible from the main window. The interface of the window has been modified to have quick access to options for each tool and different color dialogs and palettes.
+In the tools panel you'll find *several new shortcuts to the curves and tone / saturation*, directly accessible from the main window. The interface of the window has been modified to have quick access to options for each tool and different color dialogs and palettes. 
 
-7. If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the top level of your GIMP configuration folder.  This file will add icons for the Hue/Saturation and Curves dialogs to the Toolbox.
+6. Do the same with the file *sessionrc* if you want to *modify the GPS position and rearrange the windows* on the Gimp's screen. You should know that the layout and the interface are highly optimized to work comfortably with a screen resolution of at least 1280 pixels wide. It is also advisable to install this file, but *first make a backup copy of the original one, just in case.*
+ If you want to use *GPS dialog layout* then copy the file *sessionrc* to the top level of your GIMP configuration folder. (_Note:  this will change the layout of GIMP's windows.  Save a backup copy of the original sessionrc (just rename it to sessionrc.old, for example) that you can restore if the new layout does not suit your needs._)
+ 
+ 
+7. Start Gimp. 
 
-8. If you want to use *GPS dialog layout* then copy the file *sessionrc* to the top level of your GIMP configuration folder. (_Note:  this will change the layout of GIMP's windows.  Save a backup copy of the original sessionrc (just rename it to sessionrc.old, for example) that you can restore if the new layout does not suit your needs._)
+8. The next step is optional but will improve the overall usability of the user   interface.
+ _Edit->Preferences->Toolbox_
+  Activate the three ticks available there.
 
-9. Start Gimp.  The next two steps are optional but will improve the overall usability of the user interface.
-  *_Edit->Preferences->Toolbox_
-   and activate the three options there.
-
-  *_Edit->Preferences->Tool Options_  
+ _Edit->Preferences->Tool Options_  
    On this page, under the Paint Options Shared Between Tools, disable the three options (Brush, Pattern, and Gradient).
 
-  *_Edit->Preferences->Image Windows/Mouse Pointers_
-disable the “Show brush outline” option and make sure you have “checked” or enabled the “Show pointer for paint tools”.
-
-This will increase the speed of brushes when you are painting.
+ _Edit->Preferences->Image Windows/Mouse Pointers_
+  Disable the “Show brush outline” option and make sure you have “checked” or enabled the “Show pointer for paint tools”.This will increase the speed of brushes when you are painting.
 
 10. That's  all. Enjoy it, the most important step!
