--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -52,47 +52,49 @@ WIP
 
 ----
 ==Installing GPS in 10 steps==
-*GIMP must be installed on your computer before* installing GPS. If it is not you can download it from the official website 
+*GIMP must be installed on your computer before* installing GPS. If it is not installed, you can download it from the official website:
 
 http://www.gimp.org/downloads/
 
-1. Install gimp and execute for the first time. Then Quit. (this step create the *tool-options* folder wich is needed later).
+1. Install gimp and execute it for the first time.Do nothing and Quit. (this step create the *tool-options* folder wich is needed later).
  
 
 2. Download the last version of GPS From the google code page:
 
 http://code.google.com/p/gps-gimp-paint-studio/downloads/list
 
-To install Gimp Paint Studio, first we must know *where the user directory of Gimp is located.* Assuming you have installed Gimp version 2.6.x (where x can be 10, 11 or later...) is usually found at:
+To install Gimp Paint Studio, first we must know *where the user directory of Gimp is located.* Usually this is a hidden folder.Assuming you have installed Gimp version 2.6.x (where x can be 10, 11 or later...) is usually found at:
 
   * Windows : C:\Documents and Settings\username\.gimp-2.6
+    Edit folder options if it is not visible.
 
   * MacOS : /Users/username/Library/Application Support/Gimp
 
   * GNU/Linux : /home/username/.gimp-2.6 
+    Ctrl+H if it is not visible
 
   * If you have the portable version “GIMPPortable/App/gimp/share/gimp/2.0/
 
 Start the fun part!
-you should back up the original files in case you wish to restore original layouts and tools.
+you should back up the original files in case you wish to restore originals
 
-3. Copy the contents of the *brushes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
+3. Copy the contents of the *brushes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/brushes)
 
-4. Copy the contents of the *patterns* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
+4. Copy the contents of the *patterns* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/patterns)
 
-5. Copy the contents of the *gradients* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
+5. Copy the contents of the *gradients* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/gradients)
 
-6. Copy the contents of the *palettes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6)
+6. Copy the contents of the *palettes* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/palettes)
 
-7. If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the Gimp directory.(/.gimp-2.6)  This file will add icons for the new tools in the Toolbox. *You should make a copy of this file in case you later want to restore*.
+7. Copy the contents of the *tool-options* directory to the folder with the same name in the Gimp directory.(/.gimp-2.6/tool-options)
 
+8. If you want to *add some tools to the Toolbox* then copy the  *toolrc* file to the Gimp directory.(/.gimp-2.6)  This file will add icons for the new tools in the Toolbox. *You should make a copy of this file in case you later want to restore*.
 
-8. Do the same with the file *sessionrc* if you want to *modify the GPS position and rearrange the windows* on the Gimp's screen. Copy the file *sessionrc* to the Gimp directory.(/.gimp-2.6). This will change the layout of GIMP's windows.*You should make a copy of this file in case you later want to restore*.
- 
+9. Do the same with the file *sessionrc* if you want to *modify the GPS position and rearrange the windows* on the Gimp's screen. Copy the file *sessionrc* to the Gimp directory.(/.gimp-2.6). This will change the layout of GIMP's windows.*You should make a copy of this file in case you later want to restore*.
  
 Start Gimp. 
 
-9. The next step is optional but will improve the overall usability of the user   interface.
+10. The next step is optional but will improve the overall usability of the user   interface.
 
 _Edit->Preferences->Toolbox_
 Activate the three ticks available there.
@@ -103,4 +105,4 @@ On this page, under the Paint Options Shared Between Tools, disable the three op
 _Edit->Preferences->Image Windows/Mouse Pointers_
 Disable the “Show brush outline” option and make sure you have “checked” or enabled the “Show pointer for paint tools”.This will increase the speed of brushes when you are painting.
 
-10. That's  all. Enjoy it, the most important step!
+That's  all. Enjoy it, this is the most important step!
