Edited wiki page LinkPage through web user interface.

--- a/wiki/LinkPage.wiki
+++ b/wiki/LinkPage.wiki
@@ -3,7 +3,7 @@
 
 =GPS members galleries= 
 
- * [http://ramonmirandavisualart.blogspot.com/ Ramón Miranda]
+ * [http://www.ramonmiranda.com/ Ramón Miranda]
  * [http://blogdodesenhador.blogspot.com/ Mozart Couto]
  * [http://trabiscos.blogspot.com/ Jose Americo Gobbo]
  * [http://www.davidrevoy.com/index.php?lang=en David Revoy]
