Edited wiki page Videotutorials_EN through web user interface.

--- a/wiki/Videotutorials_EN.wiki
+++ b/wiki/Videotutorials_EN.wiki
@@ -24,6 +24,8 @@ The following videos shows what is GPS and how to use it. Enjoy them and please,
 
  || *Speed Drawing Yoko - RichardHTT Contest* <wiki:video url="http://www.youtube.com/watch?v=xRkzVfjVBY8"/> || *SpeedDrawing: Miku and BlackRockShooter* <wiki:video url="http://www.youtube.com/watch?v=0R2x1bpJJOU&feature=related"/> ||
 
- 
+ || *SpeedDrawing Howl Moving Castle - LineArt * <wiki:video url="http://www.youtube.com/watch?v=A6iPNCmbKbQ"/> || *SpeedDrawing Howl Moving Castle - Coloring * <wiki:video url="http://www.youtube.com/watch?v=m98xGONU-6I"/> ||
 
+ 
+Do you want to see your video here? please contact me and let me know it!
 More to come...
